# paldesk

./: Cargo.toml  paldesk.patch
src/ui/: index.html
