[package]
name = "paldesk"
version = "1.0.0"
authors = ["hackerjack2012 <your.email@example.com>"]
edition = "2021"
description = "Paldesk: Remote desktop software for seamless connectivity"
homepage = "https://github.com/hackerjack2012/paldesk"
repository = "https://github.com/hackerjack2012/paldesk"
license = "AGPL-3.0"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"] }
# Add other dependencies from original RustDesk Cargo.toml (check your repo)

[build]
target = "x86_64-pc-windows-msvc"

[package.metadata.winres]
ProductName = "Paldesk"
FileDescription = "Paldesk Remote Desktop Software"
LegalCopyright = "Copyright © 2025 hackerjack2012"
OriginalFilename = "Paldesk.exe"
